# Skymarket

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  manage.py
market_postgres/: nginx_development.conf
skymarket/: Dockerfile  pyproject.toml
skymarket/ads/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py
