[tool.poetry]
name = "skymarket"
version = "0.1.0"
description = ""
authors = ["alexander <FILlove@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
pillow = "^9.3.0"
djangorestframework-simplejwt = "^4.8.0"
python-dotenv = "^0.21.0"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"
djoser = "^2.1.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.0.0"}
drf-yasg = "^1.21.4"
documentation = "^0.0.1"
django-filter = "^22.1"
gunicorn = "^20.1.0"
drf-nested-routers = "^0.93.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
